# C_sampe

./: CMakeLists.txt  FizzBuzz.c  Makefile  README.md  dice.c
.circleci/: config.yml
.github/workflows/: c-cpp.yml
CMake_CCRL/: CMakeLists.txt  Linker.opt  ccrl.cmake  cross.cmake
CMake_CCRL/src/: test.c
RL78_G13_Tutorial_Analysis_CC/: CMakeLists.txt  RL78_G13_Tutorial_Analysis_CC.9921349-Z100.mtud  RL78_G13_Tutorial_Analysis_CC.mtpj  RL78_G13_Tutorial_Analysis_CC.rcpe  cross.cmake
RL78_G13_Tutorial_Analysis_CC/Intermidiate/Assembler/: main.asm  r_cg_cgc.asm  r_cg_cgc_user.asm  r_cg_port.asm  r_cg_port_user.asm  r_cg_timer.asm  r_cg_timer_user.asm  r_main.asm  r_systeminit.asm
RL78_G13_Tutorial_Analysis_CC/Intermidiate/Crossreference/: main.cref  r_cg_cgc.cref  r_cg_cgc_user.cref  r_cg_port.cref  r_cg_port_user.cref  r_cg_timer.cref  r_cg_timer_user.cref  r_main.cref  r_systeminit.cref
RL78_G13_Tutorial_Analysis_CC/generate/: iodefine.h  r_cg_cgc.c  r_cg_cgc.h  r_cg_cgc_user.c  r_cg_macrodriver.h  r_cg_port.c  r_cg_port.h  r_cg_port_user.c  r_cg_timer.c  r_cg_timer.h  r_cg_timer_user.c  r_cg_userdefine.h  r_main.c  r_systeminit.c
